syntax = "proto3";
package favorite;

option go_package = "./favorite";

message favorite_action_request {
  string token = 1; // 用户鉴权token
  int64 video_id = 2; // 视频id
  string action_type = 3; // 1-点赞，2-取消点赞
}

message favorite_action_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}

service Favorite{
  rpc favorite(favorite_action_request) returns(favorite_action_response);
}